--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -16,13 +16,13 @@
 
 // Header
 
-@header-height: 215px;
-@header-height-collapsed: 54px;
+@header-height: 155px;
+@header-height-collapsed: 64px;
 
 // Footer
 
 @footer-height: 30px;
-@footer-height-collapsed: 10px;
+@footer-height-collapsed: 5px;
 
 
 // Toolbar
